syntax = "proto3";
package com.jayway.kday.grpc;
option java_multiple_files = true;

message YourName {
    string your_name = 1;
}
message ClueOne {
    string clue = 1;
}

message ClueTwo {
    string clue = 1;
}

message ClueThree {
    string clue = 1;
}

message ClueFour {
    int32 clue = 1;
}

message AllClues {
    ClueOne clue_one = 1;
    ClueTwo clue_two = 2;
    ClueThree clue_three = 3;
    ClueFour clue_four = 4;
    YourName your_name = 5;
}

message FinalSecret {
    string final_secret = 1;
}

service Puzzle {
    rpc StartHere (YourName) returns (ClueOne);
    rpc endpointOne (ClueOne) returns (ClueTwo);
    rpc endpointTwo (ClueTwo) returns (ClueThree);
    rpc endpointThree (ClueThree) returns (ClueFour);
    rpc SolvePuzzle (AllClues) returns (FinalSecret);
}
